--- a/requirements.txt
+++ b/requirements.txt
@@ -1,208 +1,49 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-accelerate=0.21.0=pypi_0
-aiofiles=23.2.1=pypi_0
-altair=5.3.0=pypi_0
-anyio=4.3.0=pypi_0
-asttokens=2.4.1=pyhd8ed1ab_0
-attrs=23.2.0=pypi_0
-backcall=0.2.0=pyh9f0ad1d_0
-bitsandbytes=0.43.0=pypi_0
-blas=1.0=mkl
-bottleneck=1.3.7=py38ha9d4c09_0
-brotli-python=1.0.9=py38h6a678d5_8
-bzip2=1.0.8=h5eee18b_6
-ca-certificates=2024.3.11=h06a4308_0
-certifi=2024.2.2=pyhd8ed1ab_0
-chardet=5.2.0=pypi_0
-charset-normalizer=3.3.2=pypi_0
-click=8.1.7=py38h06a4308_0
-comm=0.2.2=pyhd8ed1ab_0
-contourpy=1.1.1=pypi_0
-cudatoolkit=11.3.1=h2bc3f7f_2
-cycler=0.12.1=pypi_0
-debugpy=1.8.1=py38h17151c0_0
-decorator=5.1.1=pyhd8ed1ab_0
-einops=0.6.1=pypi_0
-einops-exts=0.0.4=pypi_0
-executing=2.0.1=pyhd8ed1ab_0
-fastapi=0.110.0=pypi_0
-ffmpeg=4.3=hf484d3e_0
-ffmpy=0.3.2=pypi_0
-filelock=3.13.3=pypi_0
-fonttools=4.50.0=pypi_0
-freetype=2.12.1=h4a9f257_0
-fsspec=2024.3.1=pypi_0
-gmp=6.2.1=h295c915_3
-gnutls=3.6.15=he1e5248_0
-gradio=4.16.0=pypi_0
-gradio-client=0.8.1=pypi_0
-httpcore=0.17.3=pypi_0
-httpx=0.24.0=pypi_0
-huggingface-hub=0.22.2=pypi_0
-idna=3.6=pypi_0
-importlib-metadata=7.1.0=pyha770c72_0
-importlib-resources=6.4.0=pypi_0
-importlib_metadata=7.1.0=hd8ed1ab_0
-intel-openmp=2023.1.0=hdb19cb5_46306
-ipykernel=6.29.3=pyhd33586a_0
-ipython=8.12.2=pyh41d4057_0
-jedi=0.19.1=pyhd8ed1ab_0
-jinja2=3.1.3=pypi_0
-joblib=1.3.2=pypi_0
-jpeg=9e=h5eee18b_1
-jsonschema=4.21.1=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
-jupyter_client=8.6.1=pyhd8ed1ab_0
-jupyter_core=5.7.2=py38h578d9bd_0
-keyutils=1.6.1=h166bdaf_0
-kiwisolver=1.4.5=pypi_0
-krb5=1.21.2=h659d440_0
-lame=3.100=h7b6447c_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.40=h55db66e_0
-lerc=3.0=h295c915_0
-libdeflate=1.17=h5eee18b_1
-libedit=3.1.20191231=he28a2e2_2
-libffi=3.4.4=h6a678d5_1
-libgcc-ng=13.2.0=h77fa898_6
-libgomp=13.2.0=h77fa898_6
-libiconv=1.16=h5eee18b_3
-libidn2=2.3.4=h5eee18b_0
-libnsl=2.0.1=hd590300_0
-libpng=1.6.39=h5eee18b_0
-libsodium=1.0.18=h36c2ea0_1
-libsqlite=3.45.3=h2797004_0
-libstdcxx-ng=13.2.0=hc0a3c3a_6
-libtasn1=4.19.0=h5eee18b_0
-libtiff=4.5.1=h6a678d5_0
-libunistring=0.9.10=h27cfd23_0
-libuuid=2.38.1=h0b41bf4_0
-libwebp-base=1.3.2=h5eee18b_0
-libxcrypt=4.4.36=hd590300_1
-libzlib=1.2.13=hd590300_5
-llava=1.2.2.post1=pypi_0
-lz4-c=1.9.4=h6a678d5_1
-markdown-it-py=3.0.0=pypi_0
-markdown2=2.4.13=pypi_0
-markupsafe=2.1.5=pypi_0
-matplotlib=3.7.5=pypi_0
-matplotlib-inline=0.1.7=pyhd8ed1ab_0
-mdurl=0.1.2=pypi_0
-mkl=2023.1.0=h213fc3f_46344
-mkl-service=2.4.0=py38h5eee18b_1
-mkl_fft=1.3.8=py38h5eee18b_0
-mkl_random=1.2.4=py38hdb19cb5_0
-mpmath=1.3.0=pypi_0
-ncurses=6.4.20240210=h59595ed_0
-nest-asyncio=1.6.0=pyhd8ed1ab_0
-nettle=3.7.3=hbbd107a_1
-networkx=3.1=pypi_0
-numexpr=2.8.4=py38hc78ab66_1
-numpy=1.24.4=pypi_0
-numpy-base=1.24.3=py38h060ed82_1
-nvidia-cublas-cu12=12.1.3.1=pypi_0
-nvidia-cuda-cupti-cu12=12.1.105=pypi_0
-nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
-nvidia-cuda-runtime-cu12=12.1.105=pypi_0
-nvidia-cudnn-cu12=8.9.2.26=pypi_0
-nvidia-cufft-cu12=11.0.2.54=pypi_0
-nvidia-curand-cu12=10.3.2.106=pypi_0
-nvidia-cusolver-cu12=11.4.5.107=pypi_0
-nvidia-cusparse-cu12=12.1.0.106=pypi_0
-nvidia-nccl-cu12=2.18.1=pypi_0
-nvidia-nvjitlink-cu12=12.4.99=pypi_0
-nvidia-nvtx-cu12=12.1.105=pypi_0
-openh264=2.1.1=h4ff587b_0
-openjpeg=2.4.0=h3ad879b_0
-openssl=3.3.0=hd590300_0
-orjson=3.10.0=pypi_0
-packaging=24.0=pyhd8ed1ab_0
-pandas=2.0.3=py38h1128e8f_0
-parso=0.8.4=pyhd8ed1ab_0
-peft=0.10.0=pypi_0
-pexpect=4.9.0=pyhd8ed1ab_0
-pickleshare=0.7.5=py_1003
-pillow=10.3.0=py38h5eee18b_0
-pip=24.0=pyhd8ed1ab_0
-pkgutil-resolve-name=1.3.10=pypi_0
-platformdirs=4.2.1=pyhd8ed1ab_0
-prompt-toolkit=3.0.43=py38h06a4308_0
-prompt_toolkit=3.0.43=hd3eb1b0_0
-protobuf=5.26.1=pypi_0
-psutil=5.9.8=py38h01eb140_0
-ptyprocess=0.7.0=pyhd3deb0d_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-pydantic=2.6.4=pypi_0
-pydantic-core=2.16.3=pypi_0
-pydub=0.25.1=pypi_0
-pygments=2.17.2=pyhd8ed1ab_0
-pyparsing=3.1.2=pypi_0
-pysocks=1.7.1=py38h06a4308_0
-python=3.8.19=hd12c33a_0_cpython
-python-dateutil=2.9.0.post0=pypi_0
-python-dotenv=0.21.0=py38h06a4308_0
-python-multipart=0.0.9=pypi_0
-python-tzdata=2023.3=pyhd3eb1b0_0
-python_abi=3.8=4_cp38
-pytorch-mutex=1.0=cuda
-pytz=2024.1=py38h06a4308_0
-pyyaml=6.0.1=pypi_0
-pyzmq=26.0.2=py38ha44f8e3_0
-readline=8.2=h8228510_1
-referencing=0.34.0=pypi_0
-regex=2023.12.25=pypi_0
-requests=2.31.0=py38h06a4308_1
-rich=13.7.1=pypi_0
-rpds-py=0.18.0=pypi_0
-ruff=0.3.4=pypi_0
-safetensors=0.4.2=pypi_0
-scikit-learn=1.2.2=pypi_0
-scipy=1.10.1=pypi_0
-semantic-version=2.10.0=pypi_0
-sentencepiece=0.1.99=pypi_0
-setuptools=69.5.1=pyhd8ed1ab_0
-shellingham=1.5.4=pypi_0
-shortuuid=1.0.13=pypi_0
-six=1.16.0=pyh6c4a22f_0
-sniffio=1.3.1=pypi_0
-sqlite=3.45.3=h2c6b66d_0
-stack_data=0.6.2=pyhd8ed1ab_0
-starlette=0.36.3=pypi_0
-svgwrite=1.4.3=pypi_0
-sympy=1.12=pypi_0
-tbb=2021.8.0=hdb19cb5_0
-threadpoolctl=3.4.0=pypi_0
-timm=0.6.13=pypi_0
-tk=8.6.13=noxft_h4845f30_101
-tokenizers=0.19.1=pypi_0
-tomlkit=0.12.0=pypi_0
-toolz=0.12.1=pypi_0
-torch=1.13.0+cu117=pypi_0
-torchaudio=0.7.2=pypi_0
-torchvision=0.8.2+cu110=pypi_0
-tornado=6.4=py38h01eb140_0
-tqdm=4.66.2=pypi_0
-traitlets=5.14.3=pyhd8ed1ab_0
-transformers=4.40.1=pypi_0
-triton=2.1.0=pypi_0
-typer=0.12.0=pypi_0
-typer-cli=0.12.0=pypi_0
-typer-slim=0.12.0=pypi_0
-typing-extensions=4.10.0=pypi_0
-typing_extensions=4.11.0=pyha770c72_0
-tzdata=2024.1=pypi_0
-urllib3=2.2.1=pypi_0
-uvicorn=0.29.0=pypi_0
-wavedrom=2.0.3.post3=pypi_0
-wcwidth=0.2.13=pyhd8ed1ab_0
-websockets=11.0.3=pypi_0
-wheel=0.43.0=pyhd8ed1ab_1
-xz=5.4.6=h5eee18b_1
-zeromq=4.3.5=h75354e8_3
-zipp=3.18.1=pypi_0
-zlib=1.2.13=hd590300_5
-zstd=1.5.5=hc292b87_1
+accelerate==0.34.2
+bitsandbytes==0.43.3
+certifi==2024.8.30
+charset-normalizer==3.3.2
+filelock==3.16.0
+fsspec==2024.9.0
+huggingface-hub==0.24.6
+idna==3.8
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
+numpy==2.1.1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.68
+nvidia-nvtx-cu12==12.1.105
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+protobuf==5.28.0
+psutil==6.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+safetensors==0.4.5
+sentencepiece==0.2.0
+six==1.16.0
+sympy==1.13.2
+tokenizers==0.19.1
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
+tqdm==4.66.5
+transformers==4.44.2
+triton==3.0.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
